fix: some css and layout alignments

--- a/client/src/components/user-card/user-card.scss
+++ b/client/src/components/user-card/user-card.scss
@@ -1,6 +1,6 @@
 .ui.card.user {
   margin: 1em 0 !important;
-
+  max-height: 100px;
   .extra.content {
     font-size: .9em;
   }
